[package]
name = "gen_cars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ['cargo'] }
tokio = { version = "1", features = ["full", "tracing"] }
futures = "0.3"
fvm_ipld_car = "0.6.0"
anyhow = "1"
libipld = { version = "0.14.0", features = ["serde-codec"] }
